# models/ipwhitelistings/ip-whitelistings.go
@@ -1,8 +1,8 @@
 package ipwhitelistings
 
-// IPWhitelisting .
-type IPWhitelisting struct {
-	IP     string `json:"ip"`
+// IPWhitelistingModel .
+type IPWhitelistingModel struct {
+	IP     string `json:"ip" validate:"required" example:"127.0.0.1"`
 	Remark string `json:"remark"`
 	Enable *int   `json:"enable"`
 }
